# godot-project-manager

./: project.godot
addons/rust_build_helper/: plugin.cfg  plugin.gd  runner.gd  runner.tscn
assets/: icon.svg.import
assets/themes/: empty_content_margin_10.stylebox
assets/translations/: en.vpptx
model/: config.gd  editor_binary.gd  globals.gd
resources/licenses/: godot-rust
rust/: Cargo.toml
rust/src/: about.rs  about_screen.rs  addons_screen.rs  config.rs  engine.rs  lib.rs  main_screen.rs  projects.rs  projects_screen.rs  settings_screen.rs  templates_screen.rs  utils.rs
screens/: main.gd  main.gdns  main.tscn  splash.gd  splash.tscn
screens/about/: about.gdns  about.tscn
screens/addons/: addons.gdns  addons.tscn
screens/logs/: logs.gd  logs.tscn
screens/projects/: project.gd  project.tscn  projects.gd  projects.gdns  projects.tscn
screens/settings/: abstract_settings_item.gd  abstract_settings_item.tscn  abstract_settings_page.gd  abstract_settings_page.tscn  binaries.gd  binaries.tscn  danger_zone.gd  danger_zone.tscn  debounce_time.gd  debounce_time.tscn  default_binaries.gd  default_binaries.tscn  editor_binary_edit_default_arguments.tscn  editor_binary_edit_name.gd  editor_binary_edit_name.tscn  editor_binary_edit_path.gd  editor_binary_edit_path.tscn  editor_binary_edit_popup.gd  editor_binary_edit_popup.tscn  editor_binary_edit_type.gd  editor_binary_edit_type.tscn  editor_binary_item.tscn  general.gd  general.tscn  scan_path_item.gd  scan_paths.gd  (+5 more)
utils/: app_manager.gd  godot_project_manager.gdnlib  logger.gd  translation_helper.gd
(+20 files in other folders)
