[package]
name = "godot-project-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
gdnative = "0.10"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4"
