[package]
name = "godot-project-manager"
version = "0.1.0"
edition = "2021"
authors = ["Tim Yuen"]
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
gdnative = "0.10"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4"
chrono = "0.4.19"
fs_extra = "1.2"
home = "0.5.3"
